# oopnet

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  benchmark.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  pr-test.yml  python-app.yml
doc/: Makefile  make.bat
doc/source/: api.rst  conf.py  download.rst  elements.rst  examples.rst  index.rst  installation.rst  intro.rst  tutorial.rst
docs/: about.rst  bokehplot_userguide.py  conf.py  development.license.rst  development.rst  examples.adders_and_removers.rst  examples.adjacency_matrix.rst  examples.centrality.rst  examples.error_handling.rst  examples.extended_period_simulation.rst  examples.graph_stuff.rst  examples.graph_weight.rst  examples.logs.rst  examples.mc_make_some_noise.rst  examples.mc_stereo.rst  examples.read_and_run.rst  examples.rst  examples.run_and_animate.rst  examples.run_and_plot.rst  gettingstarted.rst  index.rst  oopnet.elements.rst  oopnet.graph.rst  oopnet.hydraulics.rst  oopnet.plotter.rst  oopnet.reader.factories.rst  oopnet.reader.reading_modules.rst  oopnet.reader.rst  oopnet.reader.unit_converter.rst  oopnet.report.rst  oopnet.rst  oopnet.simulator.rst  oopnet.utils.adders.rst  oopnet.utils.getters.rst  oopnet.utils.removers.rst  oopnet.utils.rst  oopnet.writer.rst  oopnet.writer.writing_modules.rst  setup_environment.sh  userguide.controls.rst  (+7 more)
examples/: adders_and_removers.py  adjacency_matrix.py  bokeh_run_and_plot.py  centrality.py  edge_centrality.py  error_handling.py  extended_period.py  graph_stuff.py  graph_weight.py  logs.py  mc_make_some_noise.py  mc_stereo_multiprocessing.py  mc_stereo_scoop.py  miscellaneous.py  pdm.py  read_and_run.py  report_settings.py  run_and_animate.py  run_and_plot.py  test.py  userguide_graphs.py  userguide_network.py  userguide_plotting.py  userguide_settings.py  userguide_simulating.py
examples/data/: ETown.inp  L-TOWN_AreaC.inp  Poulakis.inp  anytown.inp
oopnet/: README.md  __init__.py  api.py  exceptions.py
oopnet/elements/: __init__.py  base.py  component_registry.py  enums.py  network.py  network_components.py  network_map_tags.py  (+3 more)
testing/: base.py  base_cases.py  test_add_element.py  test_components.py  test_deepcopy.py  test_element_list.py  test_epanet_errors.py  test_examples.py  test_get_by_id.py  test_graph.py  test_miscellaneous.py  test_plotting.py  test_property_getters.py  test_reader.py  test_remove_element.py  test_simulator.py  test_topology_getters.py  test_vector_getters.py  test_writer.py
(+127 files in other folders)
