[metadata]
name = oopnet
version = version
description = Object-oriented EPANET in Python
long_description = file: README.md
license = file: LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Typing :: Typed
;url = https://github.com/oopnet/oopnet

[options]
package_data = {'': ['*.exe']}
python_requires-python = >3.9
package_dir=
    =oopnet
packages = find:

[options.packages.find]
where = oopnet

[semantic_release]
version_variable = oopnet/__init__.py:__version__