[metadata]
name = oopnet
version = attr: oopnet.__version__
description = Object-oriented EPANET in Python
authors = David B. Steffelbauer <david.steffelbauer@ntnu.no>, Georg Arbesser-Rastburg <georg.arbesser-rastburg@tugraz.at>
;long_description = file: README.md
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Typing :: Typed
;url = https://github.com/oopnet/oopnet

[options]
python_requires_python = >3.9
packages = find_namespace:
package_dir=
    =oopnet

[options.package_data]
* = *.exe

[options.packages.find]
where = oopnet

[semantic_release]
branch = main
version_variable = oopnet/__init__.py:__version__
major_on_zero = false
