[metadata]
name = oopnet
version = attr: oopnet.__version__
description = Object-oriented EPANET in Python
author = David B. Steffelbauer
author-email = david.steffelbauer@kompetenz-wasser.de
maintainer = Georg Arbesser-Rastburg
maintainer-email = georg.arbesser-rastburg@tugraz.at
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Typing :: Typed
url = https://github.com/oopnet/oopnet
project_urls =
    Documentation = https://oopnet.readthedocs.io
keyword =
    EPANET
    modelling
    hydraulics

[options]
python_requires_python = >3.9
install_requires =
    networkx
    numpy
    pandas
    xarray
    matplotlib
    bokeh
packages = find:

[options.package_data]
* = *.exe

[options.packages.find]
exclude =
    examples
    testing

[semantic_release]
branch = main
version_variable = oopnet/__init__.py:__version__
major_on_zero = false
